--- a/custom_components/nuki_otp/manifest.json
+++ b/custom_components/nuki_otp/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "nuki_otp",
-  "name": "Nuki OTP integration",
+  "name": "Nuki OTP Generator",
   "documentation": "https://github.com/pickeld/nuki-otp",
   "issue_tracker": "https://github.com/pickeld/nuki/issues",
   "requirements": ["requests"],
