--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "nuki_otp",
   "name": "Nuki OTP Generator",
+  "documentation": "https://github.com/pickeld/nuki-otp",
   "issue_tracker": "https://github.com/pickeld/nuki/issues",
   "requirements": ["requests"],
   "dependencies": [],
