--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "domain": "nuki_otp",
   "name": "Nuki OTP Generator",
   "documentation": "https://github.com/pickeld/nuki-otp",
+  "issue_tracker": "https://github.com/pickeld/nuki-otp/issues",
   "requirements": ["requests"],
   "dependencies": [],
   "codeowners": ["@pickeld"],
